# actix-validated-forms

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
actix-validated-forms/: Cargo.toml
actix-validated-forms-derive/: Cargo.toml
actix-validated-forms-derive/src/: lib.rs
actix-validated-forms/src/: error.rs  form.rs  lib.rs  query.rs
actix-validated-forms/src/multipart/: extractor.rs  load.rs  mod.rs  test.rs
actix_validated_forms/: Cargo.toml
actix_validated_forms/src/: error.rs
actix_validated_forms/src/multipart/: extractor.rs  load.rs  mod.rs
derive-tests/: Cargo.toml  README.md
derive-tests/src/: lib.rs
src/: form.rs  lib.rs
src/multipart/: load.rs
