[package]
name = "actix_validated_forms_derive"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
repository = "https://github.com/jacob-pro/actix-validated-forms"
homepage = "https://github.com/jacob-pro/actix-validated-forms"
license = "LGPL-3.0"
description = "Derive macro for FromMultipart trait used in actix-validated-forms"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.14.4"
quote = "0.6.3"
synstructure = "0.12.4"
proc-macro2 = "1.0.19"
