[package]
name = "actix_validated_forms"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "~0.1.27"
actix-web = "~1.0.5"
serde_urlencoded = "~0.5.5"
actix-multipart = "~0.1.2"
serde = { version = "~1.0.90", features = ["derive"] }
validator = "~0.8.0"
tempfile = "~3.1.0"
mime = "~0.3.13"
